# mne_v3_project

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: windows-parity.mdc
docs/: BUILD_WINDOWS.md  EMAIL_BUILD_WINDOWS.txt  checklist_tests_MNE_V3.docx  checklist_tests_MNE_V3.html  manuel_secretaire.docx  manuel_secretaire.md
release/: README.md
scripts/: MNEGradeManager.spec  access_mdb_tools.sh  build_mac.sh  build_windows.bat  build_windows.ps1  capture_manual_screenshots.py  export_manuel_secretaire.py  package_windows_sources.sh  pyinstaller_entry.py
src/mne_grade_manager/: app.py
src/mne_grade_manager/core/: database.py  institutions.py  master_team.py  (+3 more)
tests/: test_block_compensation.py  test_block_validation_rules.py  test_course_tree.py  test_def_display.py  test_deliberation_ue_status.py  test_final_jury_closure.py  test_final_transcript_email.py  test_grade_matrix_pdf_colors.py  test_grade_rounding.py  test_internship_grades.py  test_jury_excel.py  test_jury_final_pv.py  test_jury_pv_s2.py  test_jury_pv_scope.py  test_jury_scope.py  test_m2_internship_maquette_repair.py  test_maquette_erratum.py  test_mixed_session.py  test_promote_m2_pedagogical_contract.py  test_results_excel.py  test_statistics.py  test_student_funding.py  test_student_mobility.py  test_student_mon_master_ranking.py  test_student_parcours_repair.py  test_student_ranking.py  test_success_certificate.py  test_timetable_legacy.py  test_timetable_scheduling.py  test_transcript_jury.py  test_transcript_pdf_pick.py  test_transcript_session_labels.py  test_transcript_ue_result.py
(+78 files in other folders)
